{
    "title": "Hello",
    "message": "Welcome to Flutter",
    "competition": "Competition",
    "training": "Training",
    "history": "History",
    "settings": "Settings Screen",
    "go_to_competition": "Go to Competition",
    "training_summary": "Training completed",
    "total_time": "Total time"
  }