...
      child: Stack(
        alignment: Alignment.center,
        children: [
          Stack(
            children: <Widget>[
              Container(
                key: Key("blurred_stuff"),
                height: 155,
                width: 155,
                decoration: BoxDecoration(
                  shape: BoxShape.circle,
                  color: Phases.toColor(context: context, phase: ref.watch(startIndicatorPhaseProvider).currentPhase)
                )
...
